# arch-pkg-remover

./: Cargo.toml  README.md  README.ru.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
